render the table by using d3.js

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,8 +11,13 @@
         <link href={{url_for( "static", filename="css/odorapp.css" )}} rel="stylesheet"
         type="text/css" />
         <script src={{url_for( "static", filename="js/jquery-1.9.0.js" )}}>
+
         </script>
         <script src={{url_for( "static", filename="js/bootstrap.js" )}}>
+
+        </script>
+        <script src={{url_for( "static", filename="js/d3.v3.js" )}}>
+
         </script>
     </head>
 
@@ -72,8 +77,13 @@
             </div>
         </div>
         <div id="container">
+            <table class="table table-striped">
+                <thead></thead><tbody></tbody>
+            </table>
         </div>
         <script src={{url_for( "static", filename="js/script.js" )}}>
+
         </script>
     </body>
+
 </html>
