--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
     </head>
 
     <body>
-        <form>
+        <form id='selector'>
             <fieldset>
                 <legend>
                     Predictions for receptor and method
@@ -48,8 +48,10 @@
                     {% endfor %}
                 </select>
             </fieldset>
+            <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
+            <div id='score'></div>
         </form>
-        <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
+        <div id='graph'></div>
         <div id='helpmodal' class="modal hide fade">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
