add a button to display more items of the table

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,7 @@
             <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
             <div id='score'></div>
         </form>
+        <button class="btn" id="butti">more</button>
         <div id='graph'></div>
         <div id='helpmodal' class="modal hide fade">
             <div class="modal-header">
