--- a/static/css/odorapp.css
+++ b/static/css/odorapp.css
@@ -35,3 +35,15 @@ div#container {
 	fill: steelblue;
 	stroke: white;
 }
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
