--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,7 +49,11 @@
                 </select>
             </fieldset>
             <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
-            <div id='score'></div>
+            <p id='q2score'>
+                q2 score:
+                <span id='score'></span>
+                <span id='score_label' class="label"></span>
+            </p>
         </form>
         <button class="btn" id="butti">more</button>
         <div id='graph'></div>
