reformat the layout, put help modal in separate template and include

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,96 +1,47 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta charset="utf-8" />
-        <title>
-            odor receptor predictions
-        </title>
-        <link href={{url_for( "static", filename="css/bootstrap.css" )}} rel="stylesheet"
-        type="text/css" />
-        <link href={{url_for( "static", filename="css/odorapp.css" )}} rel="stylesheet"
-        type="text/css" />
-        <script src={{url_for( "static", filename="js/jquery-1.9.0.js" )}}>
-
-        </script>
-        <script src={{url_for( "static", filename="js/bootstrap.js" )}}>
-
-        </script>
-        <script src={{url_for( "static", filename="js/d3.v3.js" )}}>
-
-        </script>
+        <title>odor receptor predictions</title>
+        <link href={{url_for( "static", filename="css/bootstrap.css" )}} rel="stylesheet" type="text/css" />
+        <link href={{url_for( "static", filename="css/odorapp.css" )}} rel="stylesheet" type="text/css" />
+        <script src={{url_for( "static", filename="js/jquery-1.9.0.js" )}}></script>
+        <script src={{url_for( "static", filename="js/bootstrap.js" )}}></script>
+        <script src={{url_for( "static", filename="js/d3.v3.js" )}}></script>
     </head>
 
     <body>
         <form id='selector'>
             <fieldset>
-                <legend>
-                    Predictions for receptor and method
-                </legend>
-                <label>
-                    Receptor
-                </label>
+                <legend>Predictions for receptor and method</legend>
+                <label>Receptor</label>
                 <select name="receptor" class="receptor">
                     {% for receptor in receptors %}
-                    <option>
-                        {{ receptor }}
-                    </option>
+                        <option>{{ receptor }}</option>
                     {% endfor %}
                 </select>
-                <label>
-                    Method
-                </label>
+                <label>Method</label>
                 <select name="method" class="method">
                     {% for method in methods %}
-                    <option>
-                        {{ method }}
-                    </option>
+                        <option>{{ method }}</option>
                     {% endfor %}
                 </select>
             </fieldset>
-            <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
-            <p id='q2score'>
-                q2 score:
-                <span id='score'></span>
-                <span id='score_label' class="label"></span>
-            </p>
         </form>
-        <button class="btn" id="butti">more</button>
+        <a href="#helpmodal" role="button" class="btn" data-toggle="modal">Help</a>
+        <p id='q2score'>
+            q2 score:
+            <span id='score'></span>
+            <span id='score_label' class="label"></span>
+        </p>
+        <button class="btn" id="more">more</button>
         <div id='graph'></div>
-        <div id='helpmodal' class="modal hide fade">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                    &times;
-                </button>
-                <h3>
-                    Modal header
-                </h3>
-            </div>
-            <div class="modal-body">
-                <p>
-                    machine readable version of the data at URLs of form:
-                    <br>
-                    <div class="code">
-                        /receptor_name/method
-                    </div>
-                    <br>
-                    with Content-Type: 'application/json'
-                </p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">
-                    Close
-                </button>
-            </div>
-        </div>
+        {% include 'helpmodal.html' %}
         <div id="container">
             <table class="table table-striped">
                 <thead></thead><tbody></tbody>
             </table>
         </div>
-        <script src={{url_for( "static", filename="js/script.js" )}}>
-
-        </script>
+        <script src={{url_for( "static", filename="js/script.js" )}}></script>
     </body>
-
 </html>
