--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        {% include 'helpmodal.html' %}
         <a href="#helpmodal" role="button" class="btn" data-toggle="modal" id='help'>Help</a>
         <form>
             <fieldset>
@@ -43,8 +44,10 @@
         <div class='row'>
             <div class='span12' id='graph'></div>
         </div>
-        <button class="btn" id="more">more</button>
-        {% include 'helpmodal.html' %}
+        <div id='controls'>
+            <button class="btn" id="more">more</button>
+            <button class="btn" id='table_button'>show table</button>
+        </div>
         <div id="container">
             <table class="table table-striped">
                 <thead></thead><tbody></tbody>
