--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,13 +36,14 @@
                 </div>
             </fieldset>
         </form>
-        <p id='q2score'>
-            q2 score:
-            <span id='score'></span>
-            <span id='score_label' class="label"></span>
-        </p>
         <div class='row'>
-            <div class='span12' id='graph'></div>
+            <div class='span3' id='info'>
+                q2 score:
+                <span id='score'></span>
+                <span id='score_label' class="label"></span>
+
+            </div>
+            <div class='span8' id='graph'></div>
         </div>
         <div id='controls'>
             <button class="btn" id="more">more</button>
