show information for the selected molecule

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,11 +37,15 @@
             </fieldset>
         </form>
         <div class='row'>
-            <div class='span3' id='info'>
-                q2 score:
-                <span id='score'></span>
-                <span id='score_label' class="label"></span>
-
+            <div class='span4' id='info'>
+                <div class='score_div'>
+                    q2 score:
+                    <span id='score'></span>
+                    <span id='score_label' class="label"></span>
+                </div>
+                <div>Name: <span id='chemname'></span></div>
+                <div>Pubchem ID: <span id='CID'></span></div>
+                <div>Predicted Value: <span id='pred'></span></div>
             </div>
             <div class='span8' id='graph'></div>
         </div>
