add less button

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,13 +49,16 @@
                 <div>Pubchem ID: <span id='CID'></span></div>
                 <div>Predicted Value: <span id='pred'></span></div>
             </div>
-            <div class='span8' id='graph'></div>
+            <div class='span7' id='graph'></div>
         </div>
         <div id='controls' class='row'>
             <button class="btn span2" id='table_button'>
                 <i class='icon-list'></i> show table
             </button>
-            <button class="btn span2 offset2" id="more-btn">
+            <button class="btn span2 offset2" id="less-btn">
+                <i class='icon-chevron-left'></i> less
+            </button>
+            <button class="btn span2" id="more-btn">
                 <i class='icon-chevron-right'></i> more
             </button>
             <button class="btn span2" id="all-btn">
