add smiles and OOB predictions of targets to the data -> display the smiles

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,6 +48,7 @@
                 <div>Name: <span id='chemname'></span></div>
                 <div>Pubchem ID: <span id='CID'></span></div>
                 <div>Predicted Value: <span id='pred'></span></div>
+                <div>Smile: <span id='smile'></span></div>
             </div>
             <div class='span7' id='graph'></div>
         </div>
