--- a/static/css/odorapp.css
+++ b/static/css/odorapp.css
@@ -33,8 +33,16 @@ body {
 	stroke: white;
 }
 
+.target-graph rect{
+    fill-opacity: 0.5;
+}
+
 rect.active {
 	fill: lightblue;
+}
+
+rect.oob-prediction {
+    fill: red;
 }
 
 tr.active {
