--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,6 +66,7 @@
                 <i class='icon-fast-forward'></i> all
             </button>
         </div>
+        <div class="target-graph-scatter"></div>
         <div class="target-graph"></div>
         <div id="container">
             <table class="table table-striped">
@@ -79,6 +80,7 @@
         </div>
         <script src={{url_for( "static", filename="js/predictionsGraph.js" )}}></script>
         <script src={{url_for( "static", filename="js/targetGraph.js" )}}></script>
+        <script src={{url_for( "static", filename="js/targetGraphScatter.js" )}}></script>
         <script src={{url_for( "static", filename="js/script.js" )}}></script>
     </body>
 </html>
