--- a/static/css/odorapp.css
+++ b/static/css/odorapp.css
@@ -1,4 +1,3 @@
-
 .code {
     font-family: monospace;
     color: #006;
@@ -18,17 +17,18 @@ body {
 }
 
 .model-select {
-    width: 40%;
+}
+
+.tabler {
+    display: none;
 }
 
 .table {
-    display: none;
     padding-top: 30px;
 }
 
 .predictions-graph, .target-graph, .target-graph-scatter{
-    height: 250px;
-    width: 40%;
+    height: 200px;
 }
 
 .invisible {
@@ -44,7 +44,7 @@ body {
     fill-opacity: 0.5;
 }
 
-rect.active {
+rect.active, circle.active{
     fill: lightblue;
 }
 
@@ -53,7 +53,7 @@ rect.oob-prediction {
 }
 
 tr.active {
-    font-weight: bold;
+    color: #999;
 }
 
 .axis path,
@@ -68,6 +68,21 @@ tr.active {
     font-size: 11px;
 }
 
-#controls {
+.controls {
     margin: 20px;
+}
+
+dl {
+    overflow: hidden;
+}
+
+
+dt {
+    float: left;
+    clear: left;
+    margin-right: 5px;
+}
+
+dt:after{
+    content: ":";
 }
