add axis labels

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,6 +48,7 @@
 
     <div class='graphs row'>
       <div class='left-graph span6'>
+        <h3>predictions</h3>
         <div class='predictions-graph'></div>
         <div class='controls'>
           <button class="btn" id="only-10-btn"><i class='icon-fast-backward'></i> 10</button>
@@ -57,6 +58,7 @@
         </div>
       </div>
       <div class="right-graph span6">
+        <h3>target vs. oob prediction</h3>
         <div class='target-graphs'>
           <div class="target-graph-scatter"></div>
           <div class="target-graph invisible"></div>
