add raw data to web app

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,6 +72,10 @@
 
 
     <button class="btn" id='table_button'><i class='icon-list'></i> show table</button>
+    <a href={{url_for("static", filename="data/training_data.zip")}} class='btn'>
+      <i class='icon-download'></i>
+      download raw data
+    </a>
     <div class='tabler'>
     <table class="table table-striped">
       <thead>
